# score_core

./: .gitignore  README.md  custom_metrics.py  dummy.json  pyproject.toml  requirements.txt  score_metrics.py
score_core/: __init__.py  models.py  retriever.py  state.py  summary.py
score_core/_faiss_index/: vectorizer.joblib
score_core/score_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build_faiss.py
src/score_core/: models.py  retriever.py
src/score_core/_faiss_index/: index.faiss  vectorizer.joblib
tests/: test_retriever.py  test_state.py  test_summary.py
